testData/inspections/go-defer-function-call/literal.go
package main

func _() {
    defer <error descr="Expression in defer must be function call"><caret>1</error>
}